--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
            <figure> <img src="./resources/kenyadrive.jpeg" alt="">
         <figcaption>DRIVE IN THE PARK-KENYA</figcaption></figure>
             
-            <figure><img src="./resources/diani.jpg" alt="">
+            <figure><img src="diani.jpg" alt="no pic">
             <figcaption>DIANI- KENYA</figcaption></figure>
             
             <figure><img src="./resources/dubai.jpg" alt="" class="rounded-lg">
