--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             
             <!-- Add more images here -->
         </div>
-        <button class="move-right">&gt;</button>
+          <button class="next">&#10095;</button>
         
     </div>
     <figure class="figure">
@@ -95,7 +95,7 @@
     </figure><hr>
     <h1>RECOMMENDATIONS</h1>
     <div class="gallery-container">
-        <button class="move-left">&lt;</button>
+         <button class="prev">&#10094;</button>
         <div class="gallery">
             <figure>
             <img src="polynesia-3021072_1280.jpg" alt="Image 1" >
