--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
             <!-- Add more images here -->
         </div>
     </div>
-    <button class="prev">&#10094;</button>
+    <button class="next">&#10094;</button>
     <figure class="figure">
         <img src="animal.jpg" alt="" width="100%">
         <figcaption>GAME DRIVE IN SOUTH AFRICA</figcaption>
     </figure><hr>
     <h1>RECOMMENDATIONS</h1>
     <div class="gallery-container">
-         
+          <button class="prev">&gt;</button>
         <div class="gallery">
             <figure>
             <img src="polynesia-3021072_1280.jpg" alt="Image 1" >
@@ -116,7 +116,7 @@
             
             <!-- Add more images here -->
         </div>
-    <button class="move-right">&gt;</button> 
+     <button class="next">&10095;</button>
 </div><hr>
 <div class="story">
     <h1>ABOUT US</h1>
