--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
     </header><hr>
 <h1 >OUR DESTINATIONS</h1>
      <div class="gallery">
+        <button class="prev-btn">&#8249;</button>
+        <div class="image-container">
+          <img src="miami.webp" alt="Image 1">
+          <img src="gamedrive1.jpeg" alt="Image 2">
+          <img src="zanzibar.webp" alt="Image 3">
+          <img src="kenyadrive.jpeg" alt="Image 4">
+          <img src="diani.jpg" alt="Image 5">
+          <img src="dubai.jpg" alt="Image 5">
+        </div>
+        <button class="next-btn">&#8250;</button>
+      </div>
+<!--     <div class="gallery">
        <button class="prev-btn">&#8249;</button>
         <div class="image-gallery">
             <figure>
@@ -84,7 +96,7 @@
         </div>
        <button class="next-btn">&#8250;</button>
         
-    </div>
+    </div>  -->
     <figure class="figure">
         <img src="animal.jpg" alt="" width="100%">
         <figcaption>GAME DRIVE IN SOUTH AFRICA</figcaption>
