--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
      <div class="gallery">
         <button class="prev-btn">&#8249;</button>
         <div class="image-container">
-          <img src="miami.webp" alt="Image 1">
+          <figure><img src="miami.webp" alt="Image 1">
+              <figcaption>Miami Florida</figcaption>
+          </figure>
           <img src="gamedrive1.jpeg" alt="Image 2">
           <img src="zanzibar.webp" alt="Image 3">
           <img src="kenyadrive.jpeg" alt="Image 4">
