--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         </nav>
     </header><hr>
 <h1 >OUR DESTINATIONS</h1>
-     <div class="gallery">
+     <div class="galery">
         <button class="prev-btn">&#8249;</button>
-        <div class="image-container">
+        <div class="imae-container">
           <figure><img src="miami.webp" alt="Image 1">
               <figcaption>Miami Florida</figcaption>
           </figure>
