--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         </nav>
     </header><hr>
 <h1 >OUR DESTINATIONS</h1>
-     <div class="galery">
+<!--      <div class="gallery">
         <button class="prev-btn">&#8249;</button>
-        <div class="imae-container">
+        <div class="image-container">
           <figure><img src="miami.webp" alt="Image 1">
               <figcaption>Miami Florida</figcaption>
           </figure>
@@ -71,8 +71,8 @@
           <img src="dubai.jpg" alt="Image 5">
         </div>
         <button class="next-btn">&#8250;</button>
-      </div>
-<!--     <div class="gallery">
+      </div> -->
+    <div class="gallery">
        <button class="prev-btn">&#8249;</button>
         <div class="image-gallery">
             <figure>
@@ -98,7 +98,7 @@
         </div>
        <button class="next-btn">&#8250;</button>
         
-    </div>  -->
+    </div>  
     <figure class="figure">
         <img src="animal.jpg" alt="" width="100%">
         <figcaption>GAME DRIVE IN SOUTH AFRICA</figcaption>
