--- a/index.html
+++ b/index.html
@@ -81,12 +81,14 @@
             <img src="dubai.jpg" alt="Image 2">
             <div class="image-text">DUBAI</div>
           </div>
-      <!-- <img src="/resources/miami.webp" alt="Image 1">
-      <img src="/resources/gamedrive1.jpeg" alt="Image 2">
-      <img src="/resources/zanzibar.webp" alt="Image 3">
-      <img src="/resources/kenyadrive.jpeg" alt="Image 4">
-      <img src="/resources/diani.jpg" alt="Image 5"> -->
-    </div>
+         <div class="image-wrapper">
+            <img src="mombasa.jpg" alt="Image 2">
+            <div class="image-text">MOMBASA- KENYA</div>
+          </div>
+     <div class="image-wrapper">
+            <img src="kilifi.jpg" alt="Image 2">
+            <div class="image-text">KILIFI- KENYA</div>
+          </div>
     <button class="next-btn">&#8250;</button>
   </div>
     <!-- <div class="gallery-container">
