--- a/index.html
+++ b/index.html
@@ -187,13 +187,28 @@
      we feature a diverse range of destinations, activities, and experiences that cater to all ages, interests,
       and budgets. From solo travel to family vacations, from budget backpacking to luxury travel, we have something for everyone.
     
-    So come and join our community of travelers, and let's explore the world together!</p>
+    So come and join our community of travelers, and let's explore the world together!</p><br>
     <button class="btn">READ MORE</button>
 </div>
 
 <div>
 
-</div>
+</div>  <hr style="width:40%" color="#ddd">
+ <section class="image-gallery">
+        <div class="image-container">
+            <img src="outdoor adventures.png" alt="Image 1" class="gallery-image">
+        </div>
+        <div class="image-container">
+            <img src="outdoor adventures(2).png" alt="Image 2" class="gallery-image">
+        </div>
+        <div class="image-container">
+            <img src="outdoor adventures(1).png" alt="Image 3" class="gallery-image">
+        </div>
+        <div class="image-container">
+            <img src="BEACH night party.png" alt="Image 4" class="gallery-image">
+        </div>
+    </section>
+    
 <footer>
     <div class="footer-container">
         <div class="footer-column">
