--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
 <div>
 
-</div>  <hr style="width:40%" color="#ddd">
+</div>  <hr style="width:100%" color="#ccc">
  <section class="image-gallery">
         <div class="image-container">
             <img src="outdoor adventures.png" alt="Image 1" class="gallery-image">
